--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,7 +1,10 @@
-@import 'reset.scss';
+@import './reset.scss';
+@import './variables.scss';
 
 body {
   background: url(../images/bg-light.png);
   background-size:100% 100%;
   background-attachment:fixed;
+  display: flex;
+  justify-content: center;
 }
