feature: add image

--- a/src/components/search/search.module.scss
+++ b/src/components/search/search.module.scss
@@ -26,6 +26,10 @@
       width: 100%;
       font-size: 16px;
       line-height: 22px;
+      // &:-internal-autofill-selected{
+      //   background-color: transparent;
+      // }
+      
     }
   }
 }
