--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,40 @@
+
+
 .content-wrapper {
   width: 700px;
   padding-top: 20px;
-}
 
-.weather-wrapper {
-  margin-top: 112px;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 40px;
-  padding: 50px;
+  .content-main {
+    .weather-wrapper {
+      margin-top: 30px;
+      background-color: rgba(255, 255, 255, 0.2);
+      border-radius: 40px;
+      padding: 50px;
+      min-height: 600px;
+      display: flex;
+      flex-direction: column;
+     
+
+      &.is_transform{
+        transform: translateY(-200px);
+      }
+    }
+
+    
+    
+    .image-wrapper {
+      
+      display: flex;
+      justify-content: flex-end;
+      .image {
+        height: 300px;
+        width: 300px;
+      }
+      // height: 200px;
+      // width: 200px;
+      // background-color: red;
+    
+    }
+
+  }
 }
