--- a/src/components/iconButton/iconButton.scss
+++ b/src/components/iconButton/iconButton.scss
@@ -1,6 +1,5 @@
 // .icon_button_wrapper{
 //   display: 'inline-block';
-
   .icon_button {
     height: 60px;
     width: 60px;
@@ -9,23 +8,28 @@
     padding: 13px;
     border: none;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 36px;
 
     &.icon_button_sm{
       height: 34px;
       width: 34px;
       padding: 9px;
+      font-size: 20px;
 
-      >span {
-        transform: scale(1.3);
-      }
     }
 
     &.is_circle{
       border-radius: 50%;
     }  
 
+    .icon{
+    
+    }
+
     >span {
-      transform: scale(2.3);
       color:#fff;
     }
 
