--- a/src/App.scss
+++ b/src/App.scss
@@ -1,40 +1,63 @@
-
-
 .content-wrapper {
   width: 700px;
-  padding-top: 20px;
+  padding: 50px 0;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 
   .content-main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+
     .weather-wrapper {
       margin-top: 30px;
       background-color: rgba(255, 255, 255, 0.2);
       border-radius: 40px;
       padding: 50px;
-      min-height: 600px;
+      height: 100%;
       display: flex;
       flex-direction: column;
-     
+      flex: 1;
 
-      &.is_transform{
-        transform: translateY(-200px);
+      &.is_transform {
+        margin-top: 140px;
       }
     }
 
-    
-    
     .image-wrapper {
-      
-      display: flex;
-      justify-content: flex-end;
-      .image {
-        height: 300px;
+      position: absolute;
+      right: 0;
+      height: 300px;
         width: 300px;
+      .image {
+        height: 100%;
+        width: 100%;
       }
-      // height: 200px;
-      // width: 200px;
-      // background-color: red;
-    
     }
+  }
+}
 
+@media screen and (max-width: 870px) {
+  .content-wrapper {
+    width: 90%;
+    padding: 30px 0;
+
+    .content-main {
+      .weather-wrapper {
+        border-radius: 20px;
+        padding: 20px;
+
+        &.is_transform {
+          margin-top: 70px;
+        }
+      }
+
+      .image-wrapper{
+        height: 157px;
+        width: 157px;
+      }
+    }
   }
 }
