--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -3,8 +3,26 @@
 
 body {
   background: url(../images/bg-light.png);
-  background-size:100% 100%;
-  background-attachment:fixed;
+  background-size: 100% 100%;
+  background-attachment: fixed;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  overflow: visible;
+  font-size: 16px;
+}
+
+#root {
   display: flex;
   justify-content: center;
+  height: 100%;
+}
+
+@media screen and (max-width: 870px) {
+  body {
+    font-size: 14px;
+  }
 }
