--- a/src/components/searchHistoryItem/searchHistoryItem.module.scss
+++ b/src/components/searchHistoryItem/searchHistoryItem.module.scss
@@ -7,7 +7,7 @@
   padding: 13px;
 
   .item_left {
-    font-size: 16px;
+    // font-size: 16px;
     line-height: 22px;
     display: flex;
     align-items: center;
@@ -19,6 +19,7 @@
     font-size: 14px;
     line-height: 19px;
     display: flex;
+    align-items: center;
   }
 
   
@@ -26,4 +27,13 @@
 
 .mr_10 {
   margin-right: 10px;
+}
+
+@media screen and (max-width: 870px) {
+  .item_wrapper {
+    .item_left{
+    flex-direction: column;
+    align-items: flex-start;
+    }
+  }
 }
