--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 .content-wrapper {
   width: 700px;
-  padding: 50px 0;
+  padding-top: 50px;
   min-height: 100%;
   display: flex;
   flex-direction: column;
@@ -10,9 +10,9 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    padding: 20px 0;
 
     .weather-wrapper {
-      margin-top: 30px;
       background-color: rgba(255, 255, 255, 0.2);
       border-radius: 40px;
       padding: 50px;
