--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,12 @@
   display: flex;
   flex-direction: column;
 
+  .theme-wrapper {
+    position: fixed;
+    top:10px;
+    right:30px;
+  }
+
   .content-main {
     flex: 1;
     display: flex;
@@ -12,8 +18,10 @@
     position: relative;
     padding: 20px 0;
 
+
+
     .weather-wrapper {
-      background-color: rgba(255, 255, 255, 0.2);
+      background-color: var(--color-main-bg);
       border-radius: 40px;
       padding: 50px;
       height: 100%;
