--- a/src/components/iconButton/iconButton.scss
+++ b/src/components/iconButton/iconButton.scss
@@ -4,7 +4,7 @@
     height: 60px;
     width: 60px;
     border-radius: 20px;
-    background-color: #6C40B5;
+    background-color: var(--color-btn-primary-bg);
     padding: 13px;
     border: none;
     cursor: pointer;
@@ -25,18 +25,16 @@
       border-radius: 50%;
     }  
 
-    .icon{
-    
-    }
 
     >span {
-      color:#fff;
+      color:var(--color-icon-text);
     }
 
     &.is_light{
-      background-color: #fff;
+      background-color: var(--color-icon);
+      border: solid 2px var(--color-btn-border);
       >span {
-        color:#666;
+        color:var(--color-text-sub);
       }
     }
   }  
