--- a/src/components/searchHistory/searchHistory.module.scss
+++ b/src/components/searchHistory/searchHistory.module.scss
@@ -1,5 +1,5 @@
 .history_wrapper {
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: var(--color-history-bg);
   border-radius: 24px;
   padding: 23px 26px;
   margin-top: 26px;
@@ -9,6 +9,7 @@
 
   .title {
     margin-bottom: 26px;
+    color:var(--color-text-info);
   }
 }
 
