--- a/src/components/searchHistoryItem/searchHistoryItem.module.scss
+++ b/src/components/searchHistoryItem/searchHistoryItem.module.scss
@@ -1,7 +1,7 @@
 .item_wrapper {
   display: flex;
   justify-content: space-between;
-  background: rgba(255, 255, 255, 0.4);
+  background: var(--color-history-item-bg);
   margin-bottom: 18px;
   border-radius: 16px;
   padding: 13px;
@@ -13,6 +13,7 @@
     align-items: center;
     flex: 1;
     justify-content: space-between;
+    color:var(--color-text-info);
   }
 
   .item_right{
