feature: change color

--- a/src/assets/styles/dark.scss
+++ b/src/assets/styles/dark.scss
@@ -11,5 +11,6 @@
   --color-icon-text:#ffffff;
   --color-input-lable:rgba(255, 255, 255, 0.4);
   --color-btn-border:rgba(255, 255, 255, 0.4);
-  --color-dropdown-bg:rgba(26, 26, 26, 0.3);
+  --color-dropdown-bg:#a689d8;
+  --color-dropdown-text:#ffffff;
 }
