--- a/src/assets/styles/light.scss
+++ b/src/assets/styles/light.scss
@@ -11,6 +11,7 @@
   --color-icon-text:#ffffff;
   --color-input-lable:rgba(0, 0, 0, 0.4);
   --color-btn-border:#ffffff;
-  --color-dropdown-bg:rgba(255, 255, 255, 0.2);
+  --color-dropdown-bg:#502694;
+  --color-dropdown-text:#ffffff;
 
 }
