--- a/src/components/themeSwitch/themeSwitch.module.scss
+++ b/src/components/themeSwitch/themeSwitch.module.scss
@@ -6,7 +6,7 @@
     }
 
     .ant-dropdown-menu-title-content{
-      color:var(--color-text-info)
+      color:var(--color-dropdown-text)
     }
   }
  
